--- a/boldbi-subapp-nginx.conf
+++ b/boldbi-subapp-nginx.conf
@@ -30,7 +30,7 @@ server {
 	} 
 	location /bold/ums { 
 		root               /var/www/boldbi-embedded/boldbi/idp/ums/wwwroot;
-		proxy_pass         http://localhost:6502/ums;
+		proxy_pass         http://localhost:6502/bold/ums;
 		proxy_http_version 1.1;
 		proxy_set_header   Upgrade $http_upgrade;
 		proxy_set_header   Connection keep-alive;
